<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/circle_quarter_top_left"
            android:layout_gravity="start|top"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_to_your_account"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:textAlignment="center"
            />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/circle_quarter_bottom_right"
            android:layout_gravity="bottom|end"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#2EFFFFFF"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_login_information"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginBottom="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email address"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/icon_email"
                android:drawablePadding="14dp"
                android:paddingVertical="18dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/icon_lock"
                android:drawablePadding="14dp"
                android:paddingVertical="18dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:textSize="18sp"/>


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#A6F2A7"
            android:paddingVertical="18dp"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="#674747"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account"
                android:textSize="18sp"
                android:layout_marginRight="8dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:textColor="#A6F2A7"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>